style.css
html,
body {
  height: 100%;
  margin: 0;
  font-family: "IBM Plex Sans KR", sans-serif;
  -ms-overflow-style: none;
}
::-webkit-scrollbar {
  /* 스크롤바 없애기 */
  display: none;
}

.header {
  padding: 10px 50px;
  color: rgb(74, 74, 74);
  /* background-color: rgb(249, 249, 180); */
  background-color: rgb(255, 255, 255);
  opacity: 0.6;
  display: flex;
  justify-content: flex-end;
  width: 100%;
  top: 0;
  right: 0;
  position: fixed;
  z-index: 50;
}

.nav-menu {
  display: flex;
  list-style: none;
  text-decoration: none;
  padding-inline-start: 0;
}

.nav-menu li {
  padding: 0 10px;
}
.nav-menu li:hover {
  cursor: pointer;
  color: rgb(138, 192, 208);
}

a {
  text-decoration-line: none;
  color: inherit;
}

.header a:hover {
  color: rgb(138, 192, 208);
}

.home-section {
  height: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.intro-section {
  width: 100%;
  height: 90%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
  margin-top: 80px;
}

.intro-item {
  width: 70%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
}

.intro-title {
  font-size: 25px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.intro-title::before,
.intro-title::after {
  content: "";
  flex: 1;
  height: 1px;
  background-color: #ccc;
  margin: 0 15px;
}

.intro-sub {
  width: 100%;
  font-size: 20px;
  padding: 20px 0;
  display: block;
}

.intro-sub-wrapper {
  display: flex;
  justify-content: space-around;
}

.intro-sub-wrapper > span {
  flex: 1;
  text-align: center;
}

.tech-icons img {
  width: 35px;
  height: 35px;
  margin: 0 10px;
}

.pofol-section {
  height: 90%;
  text-align: center;
}

.section-header {
  margin-top: 100px;
}

.project-grid {
  margin: 30px 30px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 20px;
}

.project-card {
  display: flex;
  flex-direction: column;
  padding: 0;
  height: 400px;
  width: 500px;
  /* background-color: rgb(255, 255, 214); */
  border-radius: 30px;
  text-align: center;
}

.project-card img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  border-radius: 30px;
}

.project-title {
  font-size: 1.3em;
  margin: 10px;
}

